# dear-diary

./: .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: check.yaml
src/: bin.rs  clidiary.rs  diary.rs  diarydir.rs  diaryentrykey.rs  entryinput.rs  lib.rs  tagparser.rs
src/filerepo/: tree.rs
src/index/: tags.rs
src/model/: diaryentry.rs  mod.rs
tests/: tagindex_tests.rs
