[package]
name = "dear_diary"
version = "0.1.0"
authors = ["Juri Pakaste"]
edition = "2018"

[lib]
name = "diary_core"
path = "src/lib.rs"

[[bin]]
name = "ddiary"
path = "src/bin.rs"

[dependencies]
chrono = "0.4"
directories = "3.0.1"
pom = "3.1.0"
tempfile = "3.1.0"

[dependencies.clap]
version = "~2.33.1"
default-features = false

# Cherry-pick the features you'd like to use
features = [ "color" ]
